<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backnew"
    tools:context=".ProfileActivity">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/profileimg"
        android:layout_width="150sp"
        android:layout_height="150sp"
        android:layout_margin="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="16dp"
        android:fadingEdge="vertical"
        android:src="@color/white30"
        app:civ_border_color="@color/purple_500"
        app:civ_border_width="2sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20sp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="@+id/profileimg"
        app:layout_constraintStart_toEndOf="@+id/profileimg"
        app:layout_constraintTop_toTopOf="@+id/profileimg">

        <TextView
            android:id="@+id/profilename"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/glorybold"
            android:text="@string/user_name"
            android:textColor="@color/white"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/profilemail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/glorylight"
            android:text="@string/email"
            android:textColor="@color/white60"
            android:textSize="17sp" />
    </LinearLayout>

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/chipGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:chipSpacing="2dp"
        app:layout_constraintTop_toBottomOf="@+id/profileimg">
    </com.google.android.material.chip.ChipGroup>

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/chipGroup">

        <com.google.android.material.divider.MaterialDivider
            android:id="@+id/materialDivider"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20sp"
            app:dividerColor="@color/white30" />

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10sp"
                android:id="@+id/notice_btn_profile"
                android:layout_weight="1"
                android:background="@drawable/btnnew"
                android:text="@string/notice_board"
                android:textColor="@color/purple_200" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10sp"
                android:layout_weight="1"
                android:id="@+id/main_screen_btn"
                android:background="@drawable/btnnew"
                android:text="@string/main_screen"
                android:textColor="@color/purple_200" />
        </LinearLayout>

        <com.google.android.material.divider.MaterialDivider
            android:id="@+id/materialDivider2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20sp"
            app:dividerColor="@color/white30"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </LinearLayout>

    <Button
        android:id="@+id/logout_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/logout"
        android:background="@drawable/btnnew"
        android:textColor="@color/purple_200"
        android:layout_margin="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/profileimg"
        style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton.Icon"
        app:layout_constraintEnd_toEndOf="@+id/profileimg"
        android:id="@+id/edit_profile_img"
        android:tint="@color/white"
        android:src="@drawable/ic_baseline_camera_alt_24"
        app:fabSize="mini"
        app:cardCornerRadius="50dp"/>


</androidx.constraintlayout.widget.ConstraintLayout>